--- a/app/assets/stylesheets/board.css.scss
+++ b/app/assets/stylesheets/board.css.scss
@@ -68,6 +68,11 @@ header {
 		bottom: 0;
 		right: 10px;
 	}
+	
+	#options-button {
+		color: $blue-1;
+		@include clickable;
+	}
 }
 
 main {
@@ -87,7 +92,7 @@ main {
 			width: 100%;
 		}
 		
-		.row:not(:last-child) {
+		.row:not(.last) {
 			margin-bottom: 10px;
 		}
 		
@@ -105,6 +110,11 @@ main {
 			font-weight: bold;
 			margin-bottom: 8px;
 		}
+	}
+	
+	#board-options {
+		width: 460px;
+		margin-left: -230px;
 	}
 	
 	#no-schedules {
@@ -171,8 +181,12 @@ main {
 					cursor: pointer;
 				}
 				
-				&.future span {
+				.future {
 					color: $gray-1;
+				}
+				
+				.past {
+					color: $gray-2;
 				}
 				
 				.incomplete {
