Change text a bit.

--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -17,7 +17,7 @@
 	</div>
 	<div class="promotion-column col-4 align-center">
 		<div class="title"><%= fa_icon "bolt", class: "blue-2" %> <span>Quick</span></div>
-		<div class="blurb">It's probably not quick and doesn't sync fast but don't tell anyone, shhhhhh.</div>
+		<div class="blurb">Optimistic design provides an incredibly responsive interface.</div>
 	</div>
 </section>
 
