--- a/app/views/layouts/boards.html.erb
+++ b/app/views/layouts/boards.html.erb
@@ -19,7 +19,7 @@
 		<div id="footer-links">
 			<a href="http://blog.iarke.us"><%= fa_icon "square" %></a>
 			<a href="https://twitter.com/#!/arkeus"><%= fa_icon "twitter-square" %></a>
-			<a href="https://github.com/arkeus"><%= fa_icon "github-square" %></a>
+			<a href="https://github.com/arkeus/fate-task"><%= fa_icon "github-square" %></a>
 			<a href="https://www.facebook.com/arkeus"><%= fa_icon "facebook-square" %></a>
 			<a href="https://plus.google.com/118186154411847048977/about"><%= fa_icon "google-plus-square" %></a>
 		</div>
